--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -144,3 +144,26 @@ p {
     min-height: 100vh;
     height: 100%;
 }
+
+// LOADING ANIMATION
+.loading_screen {
+    content: "";
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    background-color: $color_white;
+    z-index: 999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 100%;
+    transition: all 0.2s ease-in-out;
+
+    &.hide_loadin_screen {
+        opacity: 0;
+        pointer-events: none;
+        display: none;
+    }
+}
