--- a/styles/about.scss
+++ b/styles/about.scss
@@ -39,15 +39,19 @@ header {
                 &:nth-child(1) {
                     grid-area: one;
                 }
+
                 &:nth-child(2) {
                     grid-area: two;
                 }
+
                 &:nth-child(3) {
                     grid-area: three;
                 }
+
                 &:nth-child(4) {
                     grid-area: four;
                 }
+
                 &:nth-child(5) {
                     grid-area: five;
                 }
@@ -58,9 +62,11 @@ header {
             margin-top: 3rem;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
+
             .grid_col_span_2 {
                 grid-column: span 2;
             }
+
             .hero_about_area {
                 h1.hero_title {
                     font-size: $heading_3;
@@ -83,9 +89,11 @@ main {
         opacity: 0;
         transform: translateY(1rem);
     }
+
     section.area {
         transition: all 0.5s ease-in;
     }
+
     section.section {
         margin: 8rem 4rem 0; // top | left and right | bottom
 
@@ -93,6 +101,7 @@ main {
             margin-bottom: 8rem;
         }
     }
+
     section.insta_section {
         display: flex;
         flex-direction: column;
@@ -121,14 +130,15 @@ main {
                     border: 1px solid #33333379;
                 }
 
-                &:hover > .insta_img_area .insta_img {
+                &:hover>.insta_img_area .insta_img {
                     opacity: 80%;
                 }
 
-                &:hover > .insta_img_area .insta_btn_link_text {
+                &:hover>.insta_img_area .insta_btn_link_text {
                     opacity: 1;
                     transform: translate(-50%, -50%);
                 }
+
                 .insta_profile_info_area {
                     display: flex;
                     align-items: center;
@@ -148,8 +158,9 @@ main {
                         h1.insta_username {
                             font-family: $paragraph_font;
                             font-size: 1rem;
-                            font-weight: $semi_bold;
+                            font-weight: lighter;
                         }
+
                         p.insta_post_date {
                             font-size: 12px;
                             color: $dark25;
@@ -170,6 +181,7 @@ main {
                         object-fit: cover;
                         transition: all 0.2s ease-in-out;
                     }
+
                     .insta_btn_link_text {
                         position: absolute;
                         top: 50%;
@@ -238,6 +250,7 @@ main {
             .hero_info_area {
                 margin-top: 2rem;
                 grid-template-columns: repeat(1, 1fr);
+
                 .hero_about_area {
                     p.hero_section_bio {
                         margin-top: 1rem;
@@ -246,6 +259,7 @@ main {
             }
         }
     }
+
     main section.section {
         margin: 4rem 4rem 0; // top | left and right | bottom
 
@@ -253,6 +267,7 @@ main {
             margin-bottom: 4rem;
         }
     }
+
     main section.insta_section {
         .insta_section_text_area {
             text-align: left;
@@ -264,6 +279,7 @@ main {
     .hero_container {
         .hero_content_area {
             padding: 6rem 2rem 2rem 2rem;
+
             .hero_image_area {
                 grid-template-rows: 30vh 20vh 20vh;
                 grid-template-areas:
@@ -294,12 +310,14 @@ main {
                 line-height: 3rem;
             }
         }
+
         .insta_cards_area {
             .insta_card {
                 .insta_profile_info_area {
                     padding: 0.6rem;
                     gap: 0.6rem;
                 }
+
                 .insta_like_comment_area {
                     padding: 0.6rem;
                 }
