--- a/styles/style.css
+++ b/styles/style.css
@@ -731,6 +731,7 @@ main section.testimonial_section .testimonial_cards_area .testimonial_card .test
 }
 main section.testimonial_section .testimonial_cards_area .testimonial_card .testimonial_profile .testimonial_info .testimonial_title {
   color: #ad50d2;
+  font-size: 14px;
 }
 main section.testimonial_section .testimonial_cards_area .testimonial_card .line {
   content: "";
@@ -749,6 +750,7 @@ main section.testimonial_section .testimonial_cards_area .testimonial_card .test
 }
 main section.testimonial_section .testimonial_cards_area .testimonial_card .testimonial_review_area p.testimonial_review {
   font-weight: 300;
+  line-height: 1.5rem;
 }
 main section.contact_section .contact_section_area {
   height: 70vh;
@@ -896,7 +898,7 @@ main section.insta_section .insta_cards_area .insta_card .insta_profile_info_are
 main section.insta_section .insta_cards_area .insta_card .insta_profile_info_area .insta_profile_info h1.insta_username {
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: lighter;
 }
 main section.insta_section .insta_cards_area .insta_card .insta_profile_info_area .insta_profile_info p.insta_post_date {
   font-size: 12px;
