--- a/styles/admin.css
+++ b/styles/admin.css
@@ -61,6 +61,16 @@ p {
   transition: 0.5s ease-in;
 }
 
+.error_body {
+  padding: 1rem;
+  text-align: center;
+  background-color: #fa402f;
+  color: #fcffff;
+  position: absolute;
+  width: 100%;
+  top: 0%;
+}
+
 .main_admin_login_body {
   text-align: center;
   height: 100vh;
