--- a/styles/admin.scss
+++ b/styles/admin.scss
@@ -2,6 +2,16 @@
 @import "./global/responsive";
 
 
+.error_body {
+    padding: 1rem;
+    text-align: center;
+    background-color: $color_error;
+    color: $color_white;
+    position: absolute;
+    width: 100%;
+    top: 0%;
+}
+
 .main_admin_login_body {
     text-align: center;
     height: 100vh;
