--- a/styles/admin/dashboard.css
+++ b/styles/admin/dashboard.css
@@ -61,6 +61,14 @@ p {
   transition: 0.5s ease-in;
 }
 
+p {
+  padding: 0;
+  margin: 0;
+}
+
+header nav {
+  position: fixed;
+}
 header nav .navbar-toggler,
 header nav .navbar-toggler-icon {
   border: 0;
@@ -100,16 +108,138 @@ header nav .navbar-collapse .log_out_btn:hover {
   color: #ad50d2;
 }
 
-main section.section .section_title h3 {
+.message_box {
+  position: fixed;
+  bottom: 2%;
+  right: 1%;
+  transform: translate(-1%, -2%);
+  border-radius: 1rem;
+  font-family: "Open Sans", sans-serif;
+  padding: 1rem 2rem;
+  z-index: 1;
+}
+.message_box .message_dismis_icon {
+  position: absolute;
+  top: 1%;
+  right: 1%;
+  transform: translate(-1%, -1%);
+  cursor: pointer;
+}
+.message_box .message_dismis_icon .cross_icon {
+  font-size: 20px;
+}
+.message_box p.message {
+  margin: 0;
+  width: 40ch;
+}
+
+main section.dashboard_heading .section_title h3 {
   font-family: "Playfair Display", serif;
   padding: 1rem 0rem;
   border-bottom: 1px solid rgba(12, 23, 28, 0.7490196078);
 }
-main section.section .section_title h3 .admin_name {
+main section.dashboard_heading .section_title h3 .admin_name {
+  color: #ad50d2;
+}
+main section.admin_settings {
+  margin: 2rem 0rem;
+}
+main section.admin_settings .container_left {
+  padding: 0;
+}
+main section.admin_settings .container_left .image_list_cards {
+  margin-top: 1rem;
+  height: 100vh;
+  padding: 1rem;
+  border-radius: 2rem;
+  border: 5px solid rgba(12, 23, 28, 0.7490196078);
+  overflow-y: scroll;
+  background-color: rgba(12, 23, 28, 0.0509803922);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+main section.admin_settings .container_left .image_list_cards::-webkit-scrollbar {
+  width: 0rem;
+}
+main section.admin_settings .container_left .image_list_cards::-webkit-scrollbar-track {
+  background-color: rgba(12, 23, 28, 0.2509803922);
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+main section.admin_settings .container_left .image_list_cards::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  background-color: rgba(12, 23, 28, 0.7490196078);
+}
+main section.admin_settings .container_left .image_list_cards .image_card {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  gap: 1rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 1px solid rgba(12, 23, 28, 0.2509803922);
+  background: #fcffff;
+  box-shadow: 1px 1px 10px rgba(12, 23, 28, 0.0509803922);
+}
+main section.admin_settings .container_left .image_list_cards .image_card .small_image_view .image_view {
+  height: 40px;
+  border-radius: 1rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main section.admin_settings .container_left .image_list_cards .image_card .line {
+  content: "";
+  width: 0.1rem;
+  height: 3rem;
+  background: rgba(12, 23, 28, 0.2509803922);
+}
+main section.admin_settings .container_left .image_list_cards .image_card .image_info {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  font-family: 1rem;
+}
+main section.admin_settings .container_left .image_list_cards .image_card .image_info .image_title {
+  font-size: 1.333rem;
+}
+main section.admin_settings .container_left .image_list_cards .image_card .image_info .image_uplod_date {
+  font-size: 12px;
+}
+main section.admin_settings .container_left .image_list_cards .image_card .image_operation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+main section.admin_settings .container_left .image_list_cards .image_card .image_operation .image_operation_icon {
+  padding: 0.5rem;
+  border-radius: 1rem;
+}
+main section.admin_settings .container_left .image_list_cards .image_card .image_operation .image_operation_icon:hover {
+  background-color: rgba(173, 80, 210, 0.2431372549);
+}
+main section.admin_settings .container_left .image_list_cards .image_card .image_operation .icon_delete:hover {
+  color: #fa402f;
+}
+main section.admin_settings .container_left .image_list_cards .image_card .image_operation .icon_view:hover,
+main section.admin_settings .container_left .image_list_cards .image_card .image_operation .icon_edit:hover {
   color: #ad50d2;
 }
 
 @media screen and (max-width: 550px) {
+  .message_box {
+    bottom: 0%;
+    right: 0%;
+    transform: translate(0%, 0%);
+    width: 100%;
+    border-radius: 0;
+    margin: 0;
+    display: flex;
+    padding: 1rem;
+  }
   main section.section {
     padding: 0 1rem;
   }
