--- a/styles/admin/dashboard.scss
+++ b/styles/admin/dashboard.scss
@@ -1,8 +1,15 @@
 @import "../global/_global";
 @import '../global/responsive';
 
+p {
+    padding: 0;
+    margin: 0;
+}
+
+
 header {
     nav {
+        position: fixed;
 
         .navbar-toggler,
         .navbar-toggler-icon {
@@ -41,8 +48,38 @@ header {
     }
 }
 
+.message_box {
+    position: fixed;
+    bottom: 2%;
+    right: 1%;
+    transform: translate(-1%, -2%);
+    border-radius: $border_radius;
+    font-family: $paragraph_font;
+    padding: 1rem 2rem;
+    z-index: 1;
+
+    .message_dismis_icon {
+        position: absolute;
+        top: 1%;
+        right: 1%;
+        transform: translate(-1%, -1%);
+        cursor: pointer;
+
+        .cross_icon {
+            font-size: 20px;
+            // color: $color_error;
+        }
+    }
+
+    p.message {
+        margin: 0;
+        width: 40ch;
+    }
+}
+
 main {
-    section.section {
+
+    section.dashboard_heading {
         .section_title {
             h3 {
                 font-family: $heading_font;
@@ -55,9 +92,130 @@ main {
             }
         }
     }
+
+    section.admin_settings {
+        margin: 2rem 0rem;
+
+        .container_left {
+            padding: 0;
+
+            .image_list_cards {
+                margin-top: 1rem;
+                height: 100vh;
+                padding: 1rem;
+                border-radius: calc($border_radius + 1rem);
+                border: 5px solid $dark75;
+                overflow-y: scroll;
+                background-color: $dark5;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                &::-webkit-scrollbar {
+                    width: 0rem;
+                }
+
+                &::-webkit-scrollbar-track {
+                    background-color: $dark25;
+                    border-top-right-radius: $border_radius;
+                    border-bottom-right-radius: $border_radius;
+                }
+
+                &::-webkit-scrollbar-thumb {
+                    border-radius: $border_radius;
+                    background-color: $dark75;
+                }
+
+                .image_card {
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-start;
+                    position: relative;
+                    gap: 1rem;
+                    padding: 1rem;
+                    border-radius: $border_radius;
+                    border: 1px solid $dark25;
+                    background: $color_white;
+                    box-shadow: 1px 1px 10px $dark5;
+
+                    .small_image_view {
+                        .image_view {
+                            height: 40px;
+                            border-radius: $border_radius;
+                            object-fit: cover;
+                        }
+                    }
+
+                    .line {
+                        content: "";
+                        width: .1rem;
+                        height: 3rem;
+                        background: $dark25;
+
+                    }
+
+                    .image_info {
+                        display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        width: 100%;
+                        font-family: $paragraph;
+
+                        .image_title {
+                            font-size: $heading_6;
+                        }
+
+                        .image_uplod_date {
+                            font-size: 12px;
+                        }
+                    }
+
+                    .image_operation {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        gap: .5rem;
+
+                        .image_operation_icon {
+                            padding: .5rem;
+                            border-radius: $border_radius;
+
+                            &:hover {
+                                background-color: $color_primary_light;
+                            }
+                        }
+
+                        .icon_delete {
+                            &:hover {
+                                color: $color_error;
+                            }
+                        }
+
+                        .icon_view,
+                        .icon_edit {
+                            &:hover {
+                                color: $color_primary;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 @include mobile {
+    .message_box {
+        bottom: 0%;
+        right: 0%;
+        transform: translate(0%, 0%);
+        width: 100%;
+        border-radius: 0;
+        margin: 0;
+        display: flex;
+        padding: 1rem;
+    }
+
     main {
         section.section {
             padding: 0 1rem;
