--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -12,6 +12,7 @@ $color_primary: #ad50d2;
 $color_primary_light: #ad50d23e;
 $color_white: #fcffff;
 $color_error: #fa402f;
+$color_error_light: #fa402f3e;
 $dark100: #0c171c;
 $dark75: #0c171cbf;
 $dark25: #0c171c40;
