--- a/styles/admin/dashboard.css
+++ b/styles/admin/dashboard.css
@@ -66,32 +66,34 @@ p {
   margin: 0;
 }
 
-header nav {
+header nav.navbar {
   position: fixed;
+  width: 100%;
+  z-index: 99999;
 }
-header nav .navbar-toggler,
-header nav .navbar-toggler-icon {
+header nav.navbar .navbar-toggler,
+header nav.navbar .navbar-toggler-icon {
   border: 0;
   outline: none;
   box-shadow: none;
 }
-header nav .navbar-toggler:focus,
-header nav .navbar-toggler:active,
-header nav .navbar-toggler-icon:focus {
+header nav.navbar .navbar-toggler:focus,
+header nav.navbar .navbar-toggler:active,
+header nav.navbar .navbar-toggler-icon:focus {
   outline: none;
   box-shadow: none;
 }
-header nav .navbar-collapse .nav-item .nav-link {
+header nav.navbar .navbar-collapse .nav-item .nav-link {
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
 }
-header nav .navbar-collapse .nav-item .nav-link.active {
+header nav.navbar .navbar-collapse .nav-item .nav-link.active {
   color: #ad50d2;
 }
-header nav .navbar-collapse .nav-item .nav-link:hover {
+header nav.navbar .navbar-collapse .nav-item .nav-link:hover {
   color: #ad50d2;
 }
-header nav .navbar-collapse .log_out_btn {
+header nav.navbar .navbar-collapse .log_out_btn {
   background-color: #ad50d2;
   padding: 0.6rem 2rem;
   border-radius: 10rem;
@@ -103,7 +105,7 @@ header nav .navbar-collapse .log_out_btn {
   transition: all 0.2s ease-in-out;
   border: 1px solid #ad50d2;
 }
-header nav .navbar-collapse .log_out_btn:hover {
+header nav.navbar .navbar-collapse .log_out_btn:hover {
   background: rgba(173, 80, 210, 0.2431372549);
   color: #ad50d2;
 }
@@ -133,6 +135,9 @@ header nav .navbar-collapse .log_out_btn:hover {
   width: 40ch;
 }
 
+main {
+  padding-top: 4rem;
+}
 main section.dashboard_heading .section_title h3 {
   font-family: "Playfair Display", serif;
   padding: 1rem 0rem;
@@ -144,32 +149,59 @@ main section.dashboard_heading .section_title h3 .admin_name {
 main section.admin_settings {
   margin: 2rem 0rem;
 }
+main section.admin_settings .container_left .admin_info_form {
+  font-family: "Open Sans", sans-serif;
+}
+main section.admin_settings .container_left .admin_info_form .input-group .input_edit_icon_area .input_edit_icon:hover {
+  color: #ad50d2;
+}
+main section.admin_settings .container_left .admin_info_form .form_btn_group {
+  display: flex;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+main section.admin_settings .container_left .admin_info_form .form_btn_group .admin_info_update_btn {
+  padding: 0.5rem 1rem;
+  background-color: rgba(173, 80, 210, 0.2431372549);
+  color: #ad50d2;
+  border-radius: 10rem;
+  border: 1px solid #ad50d2;
+  transition: 0.2s ease-in-out;
+}
+main section.admin_settings .container_left .admin_info_form .form_btn_group .admin_info_update_btn:hover {
+  background-color: #ad50d2;
+  color: #fcffff;
+}
 main section.admin_settings .container_right {
   padding: 0;
 }
 main section.admin_settings .container_right .image_list_cards {
   margin-top: 1rem;
-  height: 100vh;
-  padding: 1rem;
-  border-radius: 2rem;
-  border: 5px solid rgba(12, 23, 28, 0.7490196078);
+  height: 65vh;
+  padding: 0.5rem;
+  border-radius: 1.5rem;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border: 5px solid rgba(12, 23, 28, 0.0509803922);
   background-color: rgba(12, 23, 28, 0.0509803922);
   overflow-y: scroll;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 main section.admin_settings .container_right .image_list_cards::-webkit-scrollbar {
-  width: 0rem;
-}
-main section.admin_settings .container_right .image_list_cards::-webkit-scrollbar-track {
-  background-color: rgba(12, 23, 28, 0.2509803922);
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
+  width: 0.4rem;
 }
 main section.admin_settings .container_right .image_list_cards::-webkit-scrollbar-thumb {
+  background: rgba(12, 23, 28, 0.7490196078);
   border-radius: 1rem;
-  background-color: rgba(12, 23, 28, 0.7490196078);
+  margin: 0.3rem;
+}
+main section.admin_settings .container_right .image_list_cards::-webkit-scrollbar-track {
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  background-clip: padding-box;
 }
 main section.admin_settings .container_right .image_list_cards .image_card {
   display: flex;
@@ -250,6 +282,13 @@ main section.admin_settings .container_right .image_list_cards .image_card .imag
   }
   main section.admin_settings .amdin_items_container {
     margin-bottom: 2rem;
+  }
+  main section.admin_settings .container_right .image_list_cards {
+    height: 100vh;
+    border-radius: 1.5rem;
+  }
+  main section.admin_settings .container_right .image_list_cards::-webkit-scrollbar {
+    width: 0rem;
   }
   main section.admin_settings .container_right .image_list_cards .image_card {
     flex-direction: column;
