--- a/styles/admin/dashboard.scss
+++ b/styles/admin/dashboard.scss
@@ -6,10 +6,11 @@ p {
     margin: 0;
 }
 
-
 header {
-    nav {
+    nav.navbar {
         position: fixed;
+        width: 100%;
+        z-index: 99999;
 
         .navbar-toggler,
         .navbar-toggler-icon {
@@ -78,6 +79,7 @@ header {
 }
 
 main {
+    padding-top: 4rem;
 
     section.dashboard_heading {
         .section_title {
@@ -96,34 +98,75 @@ main {
     section.admin_settings {
         margin: 2rem 0rem;
 
+        .container_left {
+            .admin_info_form {
+                font-family: $paragraph_font;
+
+                .input-group {
+                    .input_edit_icon_area {
+                        .input_edit_icon {
+                            &:hover {
+                                color: $color_primary;
+                            }
+                        }
+                    }
+                }
+
+                .form_btn_group {
+                    display: flex;
+                    gap: 0.5rem;
+                    flex-wrap: wrap;
+
+                    .admin_info_update_btn {
+                        padding: .5rem 1rem;
+                        background-color: $color_primary_light;
+                        color: $color_primary;
+                        border-radius: 10rem;
+                        border: 1px solid $color_primary;
+                        transition: .2s ease-in-out;
+
+                        &:hover {
+                            background-color: $color_primary;
+                            color: $color_white;
+                        }
+                    }
+                }
+            }
+        }
+
         .container_right {
             padding: 0;
 
             .image_list_cards {
                 margin-top: 1rem;
-                height: 100vh;
-                padding: 1rem;
-                border-radius: calc($border_radius + 1rem);
-                border: 5px solid $dark75;
+                height: 65vh;
+                padding: .5rem;
+                border-radius: calc($border_radius + .5rem);
+                border-top-right-radius: 0;
+                border-bottom-right-radius: 0;
+                border: 5px solid $dark5;
                 background-color: $dark5;
                 overflow-y: scroll;
+                overflow-x: hidden;
                 display: flex;
                 flex-direction: column;
                 gap: 1rem;
 
                 &::-webkit-scrollbar {
-                    width: 0rem;
-                }
-
-                &::-webkit-scrollbar-track {
-                    background-color: $dark25;
-                    border-top-right-radius: $border_radius;
-                    border-bottom-right-radius: $border_radius;
+                    width: .4rem;
                 }
 
                 &::-webkit-scrollbar-thumb {
+                    background: $dark75;
                     border-radius: $border_radius;
-                    background-color: $dark75;
+                    margin: .3rem;
+                }
+
+                &::-webkit-scrollbar-track {
+                    // background: black;
+                    border-left: 3px solid transparent;
+                    border-right: 3px solid transparent;
+                    background-clip: padding-box;
                 }
 
                 .image_card {
@@ -232,6 +275,13 @@ main {
 
             .container_right {
                 .image_list_cards {
+                    height: 100vh;
+                    border-radius: calc($border_radius + 0.5rem);
+
+                    &::-webkit-scrollbar {
+                        width: 0rem;
+                    }
+
                     .image_card {
                         flex-direction: column;
                         align-items: flex-start;
