--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -13,8 +13,8 @@ $color_primary_light: #ad50d23e;
 $color_white: #fcffff;
 $color_error: #fa402f;
 $color_error_light: #fa402f3e;
-$color_success: #12c212;
-$color_success_light: #12c2123e;
+$color_success: #3387e1;
+$color_success_light: #3387e13e;
 $dark100: #0c171c;
 $dark75: #0c171cbf;
 $dark25: #0c171c40;
